# finding-events

./: .env  Dockerfile  docker-compose.yml  pyproject.toml  rq.txt
app/: app.conf
docker/: app.sh
src/: app.py  config.py  database.py  dependencies.py
src/event/: db.py  gql_types.py  models.py  router.py  schemas.py  utils.py
src/pages/: router.py
src/templates/: add_event.html  base.html  category.html  event_details.html  index.html  update_event.html
src/user/: models.py  router.py  schemas.py
