[tool.poetry]
name = "finding-event-gql"
version = "0.1.0"
description = ""
authors = ["CoSm1C AvEnGeR <zhora.zhilin.06@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
strawberry-graphql = {extras = ["fastapi"], version = "^0.224.1"}
uvicorn = "^0.29.0"
motor = "^3.4.0"
beanie = "^1.25.0"
pillow = "^10.3.0"
gunicorn = "^21.2.0"
python-dotenv = "^1.0.1"
fastapi = {extras = ["all"], version = "^0.110.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
